--- a/client/reader/stream/_style.scss
+++ b/client/reader/stream/_style.scss
@@ -451,7 +451,6 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 }
 
 .reader-stream__recommended-posts-list-item {
-	display: flex;
 	flex: 1;
 	flex-direction: column;
 	list-style-type: none;
